--- a/lefthook.yml
+++ b/lefthook.yml
@@ -4,3 +4,6 @@ pre-commit:
     lint:
       glob: '*.{ts,tsx}'
       run: yarn eslint {staged_files}
+    prettier:
+      glob: '*.{ts,tsx}'
+      run: yarn prettier --write {staged_files}
