--- a/package.json
+++ b/package.json
@@ -24,5 +24,6 @@
     "@commitlint/config-conventional": "17.3.0",
     "@evilmartians/lefthook": "^1.1.1",
     "lerna": "^5.4.3"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
