--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.2",
