--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -35,6 +35,7 @@
     "@typescript-eslint/parser": "^5.35.1",
     "@vitejs/plugin-react": "^2.0.1",
     "eslint": "^8.23.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28",
     "jest-environment-jsdom": "^29.0.1",
