--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -16,6 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": "./src",
+    "preserveValueImports": true,
     "paths": {
       "@/app/*": ["./app/*"],
       "@/components/*": ["./components/*"],
