--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "build": "yarn build:client && yarn build:server",
     "build:client": "lerna run build --scope=client",
     "build:server": "lerna run build --scope=server",
-    "dev": "lerna run dev",
+    "dev": "yarn dev:client && yarn dev:server",
+    "dev:client": "lerna run dev --scope=client",
+    "dev:server": "lerna run dev --scope=server",
     "test": "lerna run test",
     "lint": "lerna run lint",
     "format": "lerna run format",
