--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -20,7 +20,8 @@
     "paths": {
       "@/app/*": ["./app/*"],
       "@/components/*": ["./components/*"],
-      "@/pages/*": ["./pages/*"]
+      "@/pages/*": ["./pages/*"],
+      "@/domain/*": ["./domain/*"]
     }
   },
   "include": ["src"],
