--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,6 @@
 version: '3.9'
 
 services:
-  postgres:
-    container_name: postgres
-    image: postgres:14
-    restart: always
-    ports:
-      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
-    environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
-    volumes:
-      - ./postgres-data:/var/lib/postgres/data
-      - ./src/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
-
-  pgadmin:
-    container_name: pgadmin
-    image: dpage/pgadmin4:6.19
-    restart: always
-    ports:
-      - '5050:80'
-    environment:
-      PGADMIN_EMAIL: ${PGADMIN_EMAIL}
-      PGADMIN_PASSWORD: ${PGADMIN_PASSWORD}
-    volumes:
-      - ./pgadmin-data:/var/lib/pgadmin
-    depends_on:
-      - postgres
-
   client:
     container_name: prakticum-client
     image: prakticum-client
@@ -58,5 +30,13 @@ services:
     environment:
       SERVER_PORT: ${SERVER_PORT}
 
-volumes:
-  pgadmin-data:
+  postgres:
+    image: postgres:14
+    ports:
+      - '${POSTGRES_PORT}:${POSTGRES_PORT}'
+    environment:
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_DB: ${POSTGRES_DB}
+    volumes:
+      - ./tmp/pgdata:/var/lib/postgresql/data
