--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build:client": "lerna run build --scope=client",
     "build:server": "lerna run build --scope=server",
     "dev": "lerna run dev",
+    "dev:client": "lerna run dev --scope=client",
+    "dev:server": "lerna run dev --scope=server",
     "test": "lerna run test",
     "lint": "lerna run lint",
     "format": "lerna run format",
