--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "jest ./"
+    "test": "jest ."
   },
   "dependencies": {
+    "@emoji-mart/react": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.0",
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "axios": "^1.2.0",
     "classnames": "^2.3.2",
     "dotenv": "^16.0.2",
+    "emoji-mart": "^5.5.2",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
