--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,7 +23,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "sequelize": "^6.28.0",
-    "sequelize-typescript": "^2.1.5"
+    "sequelize-typescript": "^2.1.5",
+    "serialize-javascript": "^6.0.1"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
@@ -31,6 +32,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^28.1.8",
     "@types/pg": "^8.6.5",
+    "@types/serialize-javascript": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "babel-jest": "^29.0.1",
