--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.2",
     "eslint-config-prettier": "^8.5.0",
     "express": "^4.18.1",
+    "express-validator": "^6.15.0",
     "helmet": "^6.0.1",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
