--- a/packages/server/.env
+++ b/packages/server/.env
@@ -1,9 +1,7 @@
 CLIENT_PORT=3000
 SERVER_PORT=3001
-POSTGRES_DB=db_postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=password
-POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
-
-PRAKTIKUM_AUTH=https://ya-praktikum.tech/api/v2/auth/user
+POSTGRES_DB=db-practicum-20
+POSTGRES_USER=practicum-20
+POSTGRES_PASSWORD=eyxx653$Exn66
+POSTGRES_HOST=rc1b-vnie9id7jy3aqc5k.mdb.yandexcloud.net
+POSTGRES_PORT=6432
