feat: docker-compose

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -13,7 +13,7 @@ RUN yarn install --frozen-lockfile
 COPY . .
 
 RUN yarn lerna bootstrap
-RUN rm -rf /app/packages/server/dist/ && yarn build --scope=client
+RUN rm -rf /app/packages/server/dist/ && yarn build:client
 
 
 FROM nginx:latest as production
