--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -15,5 +15,28 @@ COPY . .
 RUN yarn lerna bootstrap
 RUN rm -rf /app/packages/server/dist/ && yarn build
 
+
+FROM node:$NODE_VERSION-buster-slim as production
+WORKDIR /app
+
+# COPY SERVER
+COPY --from=builder /app/packages/server/dist/ /app/server
+COPY --from=builder /app/packages/server/package.json /app/server/package.json
+# COPY CLIENT
+COPY --from=builder /app/packages/client/dist/ /app/client/dist
+COPY --from=builder /app/packages/client/dist-ssr /app/client/dist-ssr
+COPY --from=builder /app/packages/client/package.json /app/client/package.json
+
+RUN ls
+RUN cd server && ls
+RUN cd client && ls
+# LINKING
+WORKDIR /app/client
+RUN yarn link
+WORKDIR /app/server
+RUN yarn install --production=true
+RUN yarn link "client"
+RUN ls
+RUN cd node_modules && ls
 EXPOSE $SERVER_PORT
-CMD [ "node", "packages/server/dist/index.js" ]
+CMD [ "node", "index.js" ]
