--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "test": "jest ."
+    "test": "jest -u"
   },
   "dependencies": {
     "@emoji-mart/react": "^1.1.1",
@@ -25,6 +25,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "sass": "^1.56.1",
