feat: added CSP to nginx.conf

--- a/packages/client/nginx.conf
+++ b/packages/client/nginx.conf
@@ -11,6 +11,7 @@ http {
             root /app;
             try_files $uri /index.html;
             add_header Access-Control-Allow-Origin *;
+            add_header Content-Security-Policy-Report-Only "default-src 'self'; font-src 'self'; img-src 'self'; script-src 'self'; style-src 'self'; frame-src 'self';" always;
         }
     }
 }
