--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -25,6 +25,7 @@
     "prettier": "^2.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
     "sass": "^1.56.1",
