--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "client-server-template-with-vite",
   "private": true,
   "scripts": {
-    "bootstrap": "yarn && node init.js && lerna clean && yarn && lerna bootstrap && git config --local commit.template .gitcommittemplate",
+    "bootstrap": "yarn && node init.js && lerna clean --yes && yarn && lerna bootstrap && git config --local commit.template .gitcommittemplate",
     "build": "yarn build:client && yarn build:server",
     "build:client": "lerna run build --scope=client",
     "build:server": "lerna run build --scope=server",
