--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,48 +1,23 @@
-# Определяем название процесса (просто отображается на странице Actions в GitHub)
 name: Push To Yandex Cloud CR
-
-# Определяем условия запуска процесса
-# Подробнее см. https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows)
-on:
-  # Позволяет запускать вручную из GitHub
-  workflow_dispatch:
-
-	# Позволяет запускать при push в main (и при commit и при merge) 
-	push:
-	    branches:
-	      - main
-
-# Определяем процесс (состоит из нескольких последовательных/параллельных джобов)
+'on':
+  workflow_dispatch: null
+push: null
+branches:
+  - main
 jobs:
-  # Но нам хватит одного
   build:
-    # Для построение проекта от вас не требуется сервер или что-либо подобное, 
-		# GitHub выполнит построение, используя собственный runner - такую
-		# общедоступную 'виртуальную машину'
     runs-on: ubuntu-latest
-
-    # Определяем шаги процесса
     steps:
-      # Запускает предварительную проверку 
-			# Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
-
-      # Авторизация в Яндекс.Облаке (здесь ничего не меняем)
       - name: Yandex Cloud CR "Login" Action for GitHub Actions
         uses: yc-actions/yc-cr-login@v0.1-alpha
         with:
-          yc-sa-json-credentials: ${{ secrets.YC_SA_JSON_CREDENTIALS }}
-
-			# Построение образа и отправка его в Container Registry
-      - name: Build, tag, and push image to Yandex Cloud Container Registry
+          yc-sa-json-credentials: '${{ secrets.YC_SA_JSON_CREDENTIALS }}'
+      - name: 'Build, tag, and push image to Yandex Cloud Container Registry'
         env:
-					# Здесь указываем идентификатор регистра (о нём позднее)
           CR_REGISTRY: crp1db54u8st9o55c653
-					# Здесь указываем название репозитория (впрочем оно далее не используется)
           CR_REPOSITORY: game.practicum.yandex.ru
-					# Здесь ничего не меняем (формирует уникальное название для образа)
-          IMAGE_TAG: ${{ github.sha }}
-					# Далее указываем все прочие нужные нам перееменные среды
+          IMAGE_TAG: '${{ github.sha }}'
           CLIENT_PORT: 3000
           SERVER_PORT: 3001
           POSTGRES_USER: practicum-20
@@ -50,11 +25,15 @@ jobs:
           POSTGRES_DB: db-practicum-20
           POSTGRES_PORT: 6432
           POSTGRES_HOST: rc1b-vnie9id7jy3aqc5k.mdb.yandexcloud.net
-				# Всё описание выше было лишь подготовкой
-				# Тем не менее, оставшиеся шаги более не должны вызывать вопросы
-        run: |
+        run: >
           docker compose build
-          docker tag prakticum-client:latest cr.yandex/$CR_REGISTRY/prakticum-client:latest
+
+          docker tag prakticum-client:latest
+          cr.yandex/$CR_REGISTRY/prakticum-client:latest
+
           docker push cr.yandex/$CR_REGISTRY/prakticum-client:latest
-          docker tag prakticum-server:latest cr.yandex/$CR_REGISTRY/prakticum-server:latest
+
+          docker tag prakticum-server:latest
+          cr.yandex/$CR_REGISTRY/prakticum-server:latest
+
           docker push cr.yandex/$CR_REGISTRY/prakticum-server:latest
