--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: Push To Yandex Cloud CR
-"on":
+on:
   workflow_dispatch: null
 push: null
 branches:
@@ -25,7 +25,8 @@ jobs:
           POSTGRES_DB: db-practicum-20
           POSTGRES_PORT: 6432
           POSTGRES_HOST: rc1b-vnie9id7jy3aqc5k.mdb.yandexcloud.net
-        run: docker compose build
+        run: 
+          docker compose build
 
           docker tag prakticum-client:latest
           cr.yandex/$CR_REGISTRY/prakticum-client:latest
